; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_edit.c_ins_compl_upd_pum.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_edit.c_ins_compl_upd_pum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@compl_match_array = common dso_local global i32* null, align 8
@curwin = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ins_compl_upd_pum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ins_compl_upd_pum() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @compl_match_array, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %17

4:                                                ; preds = %0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  store i32 %7, i32* %1, align 4
  %8 = call i32 @update_screen(i32 0)
  %9 = load i32, i32* %1, align 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %9, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %4
  %15 = call i32 (...) @ins_compl_del_pum()
  br label %16

16:                                               ; preds = %14, %4
  br label %17

17:                                               ; preds = %16, %0
  ret void
}

declare dso_local i32 @update_screen(i32) #1

declare dso_local i32 @ins_compl_del_pum(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
